BottomNavBar and its navigation added.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
 
     <color name="primaryColor">#154B2D</color>
     <color name="secondaryColor">#4E9041</color>
+    <color name="primarySmooth">#F6FFF5</color>
+    <color name="backgroundLight">#FFFFFFFF</color>
 </resources>
